# triton-inference-kernels

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_kernels.py
docs/: architecture.md  interview-prep.md
examples/: quickstart.py
social/: linkedin-post.md  x-post.md
src/triton_kernels/: __init__.py  attention.py  cli.py  softmax.py  utils.py
tests/: conftest.py  test_attention.py  test_softmax.py
